[project]
name = "be-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joakim Olsen", email = "joakim.olsen@banenor.no" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
