[project]
name = "be-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joakim Olsen", email = "joakim.olsen@banenor.no" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
